Fetch data from API

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -3,23 +3,11 @@
 <head>
     <title>Explore | RepoStory</title>
     <%- include('./partials/head') %>
+    <!-- custom javscript -->
+    <script src="/js/main.js"></script>
 </head>
 <body>
 <div class="container">
-
-    <div class="login-prompt material-card">
-        <h1>Success</h1>
-
-        <p>
-            <strong>id:</strong> <%= user.github.id %><br>
-            <strong>token:</strong> <%= user.github.token %><br>
-            <strong>email:</strong> <%= user.github.email %><br>
-            <strong>name:</strong> <%= user.github.name %>
-        </p>
-
-        <a href="/logout" class="btn">Sign Out</a>
-
-    </div>
 
 </div>
 </body>
