--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,6 +21,9 @@ body {
 .container {
   height: 100vh;
   padding: 6px 10px 6px 10px;
+}
+
+.container-center {
   display: flex;
   flex-direction: column;
   align-items: center; 
@@ -90,4 +93,57 @@ body {
   display: inline-block;
   width: 100px;
   height: 100px;
+}
+
+.commit-header {
+  font-family: "Times New Roman", serif;
+  font-style: italic;
+  font-size: 14px;
+  color: rgb(150, 150, 150);
+  padding: 0px 6px 3px 6px;
+}
+
+.commit-content {
+  width: 30%;
+  height: 100%;
+  float: left;
+}
+
+.commit-transition {
+  width: 5%;
+  height: 100%;
+  float: left;
+}
+
+.blame-block {
+  margin-bottom: 5px;
+  background-color: rgb(245, 166, 35); /* orange */
+  overflow: hidden;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  font-family: "IBM Plex Mono", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.line-number {
+  float: left; /* alternate to float: right; for different layout */
+  text-align: right;
+  overflow: hidden;
+  padding-right: 7px;
+  width: 8%;
+  background-color: rgb(213, 142, 26); /* dark orange */
+  /* hacky way to ensure equal heights */
+  margin-top: -3px;
+  padding-top: 3px;
+  padding-bottom: 100%;
+  margin-bottom: -100%;
+}
+
+.line-text {
+  float: left;
+  padding-left: 6px;
+  padding-right: 6px;
+  width: 92%;
+  /* hacky way to ensure equal heights */
+  padding-bottom: 100%;
+  margin-bottom: -100%;
 }
