--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
     <%- include('./partials/head') %>
 </head>
 <body>
-<div class="container container-center">
+<div class="container center">
 
     <div class="login-prompt material-card">
         <h1>Please Sign In</h1>
