--- a/views/main.ejs
+++ b/views/main.ejs
@@ -7,8 +7,12 @@
     <script src="/js/main.js"></script>
 </head>
 <body>
-<div class="container">
-
+<div class="container with-menu"></div>
+<div class="menu">
+    <form action="/" method="get">
+      <h2>Owner &nbsp; Repo &nbsp; &nbsp; &nbsp;File Name</h2>
+      <input type="text" name="owner" id="input-owner" value="ogilliland"> / <input type="text" name="name" id="input-name" value="repo-story"> / <input type="text" name="file" id="input-file" value="server.js"> <input type="submit" class="btn btn-menu" value="Fetch">
+    </form>
 </div>
 </body>
 </html>
