--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Sign In | RepoStory</title>
+    <title>Sign In | ColorCoding</title>
     <%- include('./partials/head') %>
 </head>
 <body>
@@ -11,7 +11,7 @@
         <h1>Please Sign In</h1>
         <img src="/img/icon.png" class="logo">
 
-        <p><strong>RepoStory</strong> is built using the <a href="https://developer.github.com/v4/" target="_blank">GitHub API</a>. For it to show you information about repositories and their commit history you need to authorize access by signing in with your GitHub account.</p>
+        <p><strong>ColorCoding</strong> is built using the <a href="https://developer.github.com/v4/" target="_blank">GitHub API</a>. For it to show you information about repositories and their commit history you need to authorize access by signing in with your GitHub account.</p>
 
         <a href="/auth/github" class="btn">Continue</a>
 
