--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Explore | RepoStory</title>
+    <title>Explore | ColorCoding</title>
     <%- include('./partials/head') %>
     <!-- custom javscript -->
     <script src="/js/main.js"></script>
@@ -11,7 +11,7 @@
 <div class="menu">
     <form action="/" method="get">
       <h2>Owner &nbsp; Repo &nbsp; &nbsp; &nbsp;File Name</h2>
-      <input type="text" name="owner" id="input-owner" value="ogilliland"> / <input type="text" name="name" id="input-name" value="repo-story"> / <input type="text" name="file" id="input-file" value="server.js"> <input type="submit" class="btn btn-menu" value="Fetch">
+      <input type="text" name="owner" id="input-owner" value="ogilliland"> / <input type="text" name="name" id="input-name" value="color-coding"> / <input type="text" name="file" id="input-file" value="server.js"> <input type="submit" class="btn btn-menu" value="Fetch">
     </form>
 </div>
 </body>
