Add social links

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,4 +1,26 @@
-<!-- context aware favicon -->
+<meta charset="utf-8">
+    <!-- search engine -->
+    <meta name="description" content="Visual storytelling for git history and git blame">
+    <meta name="image" content="https://colorcoding.herokuapp.com/img/social.png">
+    <!-- schema.org for google -->
+    <meta itemprop="name" content="Explore | ColorCoding">
+    <meta itemprop="description" content="Visual storytelling for git history and git blame">
+    <meta itemprop="image" content="https://colorcoding.herokuapp.com/img/social.png">
+    <!-- twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Explore | ColorCoding">
+    <meta name="twitter:description" content="Visual storytelling for git history and git blame">
+    <meta name="twitter:creator" content="@ollymg">
+    <meta name="twitter:image:src" content="https://colorcoding.herokuapp.com/img/social.png">
+    <!-- open graph (facebook, pinterest, google+) -->
+    <meta name="og:title" content="Explore | ColorCoding">
+    <meta name="og:description" content="Visual storytelling for git history and git blame">
+    <meta name="og:image" content="https://colorcoding.herokuapp.com/img/social.png">
+    <meta name="og:url" content="https://colorcoding.herokuapp.com/">
+    <meta name="og:site_name" content="Explore | ColorCoding">
+    <meta name="og:locale" content="en_US">
+    <meta name="og:type" content="website">
+    <!-- context aware favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/img/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/img/favicon/apple-icon-72x72.png">
