Limit results to relevant commits

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -7,12 +7,12 @@
     <script src="/js/main.js"></script>
 </head>
 <body>
-<div class="container with-menu"></div>
 <div class="menu">
     <form action="/" method="get">
       <h2>Owner &nbsp; Repo &nbsp; &nbsp; &nbsp;File Name</h2>
-      <input type="text" name="owner" id="input-owner" value="ogilliland"> / <input type="text" name="name" id="input-name" value="color-coding"> / <input type="text" name="file" id="input-file" value="server.js"> <input type="submit" class="btn btn-menu" value="Fetch">
+      <input type="text" name="owner" id="input-owner"> / <input type="text" name="name" id="input-name"> / <input type="text" name="file" id="input-file"> <input type="submit" class="btn btn-menu" value="Fetch">
     </form>
 </div>
+<div class="container with-menu"></div>
 </body>
 </html>
