--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,8 +3,6 @@ html {
   font-size: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  overflow: hidden;
-  height: 100%;
 }
 
 * {
@@ -18,8 +16,6 @@ body {
   font-size: 12px;
   line-height: 1.5;
   background-color: rgb(245, 245, 245);
-  height: 100%;
-  overflow: auto;
 }
 
 .container {
@@ -36,7 +32,7 @@ body {
 }
 
 .container.with-menu {
-  margin-top: 100px;
+  margin: 108px 12px 7px 12px;
 }
 
 .login-prompt {
@@ -106,11 +102,16 @@ body {
 
 .commit {
   width: 50vw;
-  padding: 8px 12px 7px 12px;
   float: left;
 }
 
+.commit.last {
+  width:46vw;
+  padding-right: 12px;
+}
+
 .commit-header {
+  width: 90%;
   font-family: "Times New Roman", serif;
   font-style: italic;
   font-size: 14px;
@@ -127,6 +128,10 @@ body {
   float: left;
 }
 
+.commit-content.last {
+  width: 100%;
+}
+
 .commit-transition {
   width: 10%;
   float: left;
@@ -134,11 +139,15 @@ body {
 
 .blame-block {
   margin-bottom: 5px;
-  background-color: rgb(245, 166, 35); /* orange */
+  background-color: rgb(200, 200, 200);
   overflow: hidden;
   padding-top: 3px;
   padding-bottom: 3px;
   font-family: "IBM Plex Mono", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.blame-line {
+  /* overflow: hidden; */
 }
 
 .line-number {
@@ -147,7 +156,7 @@ body {
   overflow: hidden;
   padding-right: 7px;
   width: 6%;
-  background-color: rgb(213, 142, 26); /* dark orange */
+  background-color: rgb(175, 175, 175);
   /* hacky way to ensure equal heights */
   margin-top: -3px;
   padding-top: 3px;
@@ -163,6 +172,10 @@ body {
   /* hacky way to ensure equal heights */
   padding-bottom: 100%;
   margin-bottom: -100%;
+}
+
+.transition {
+  fill: rgb(160, 160, 160);
 }
 
 .menu {
